--- a/src/app.css
+++ b/src/app.css
@@ -1,1 +1,91 @@
 @import "tailwindcss";
+@import "./styles/theme/light.css";
+@import "./styles/theme/dark.css";
+
+@theme {
+    --color-primary: var(--md-sys-color-primary);
+    --color-surface-tint: var(--md-sys-color-surface-tint);
+    --color-on-primary: var(--md-sys-color-on-primary);
+    --color-primary-container: var(--md-sys-color-primary-container);
+    --color-on-primary-container: var(--md-sys-color-on-primary-container);
+    --color-secondary: var(--md-sys-color-secondary);
+    --color-on-secondary: var(--md-sys-color-on-secondary);
+    --color-secondary-container: var(--md-sys-color-secondary-container);
+    --color-on-secondary-container: var(--md-sys-color-on-secondary-container);
+    --color-tertiary: var(--md-sys-color-tertiary);
+    --color-on-tertiary: var(--md-sys-color-on-tertiary);
+    --color-tertiary-container: var(--md-sys-color-tertiary-container);
+    --color-on-tertiary-container: var(--md-sys-color-on-tertiary-container);
+    --color-error: var(--md-sys-color-error);
+    --color-on-error: var(--md-sys-color-on-error);
+    --color-error-container: var(--md-sys-color-error-container);
+    --color-on-error-container: var(--md-sys-color-on-error-container);
+    --color-background: var(--md-sys-color-background);
+    --color-on-background: var(--md-sys-color-on-background);
+    --color-surface: var(--md-sys-color-surface);
+    --color-on-surface: var(--md-sys-color-on-surface);
+    --color-surface-variant: var(--md-sys-color-surface-variant);
+    --color-on-surface-variant: var(--md-sys-color-on-surface-variant);
+    --color-outline: var(--md-sys-color-outline);
+    --color-outline-variant: var(--md-sys-color-outline-variant);
+    --color-shadow: var(--md-sys-color-shadow);
+    --color-scrim: var(--md-sys-color-scrim);
+    --color-inverse-surface: var(--md-sys-color-inverse-surface);
+    --color-inverse-on-surface: var(--md-sys-color-inverse-on-surface);
+    --color-inverse-primary: var(--md-sys-color-inverse-primary);
+    --color-primary-fixed: var(--md-sys-color-primary-fixed);
+    --color-on-primary-fixed: var(--md-sys-color-on-primary-fixed);
+    --color-primary-fixed-dim: var(--md-sys-color-primary-fixed-dim);
+    --color-on-primary-fixed-variant: var(
+        --md-sys-color-on-primary-fixed-variant
+    );
+    --color-secondary-fixed: var(--md-sys-color-secondary-fixed);
+    --color-on-secondary-fixed: var(--md-sys-color-on-secondary-fixed);
+    --color-secondary-fixed-dim: var(--md-sys-color-secondary-fixed-dim);
+    --color-on-secondary-fixed-variant: var(
+        --md-sys-color-on-secondary-fixed-variant
+    );
+    --color-tertiary-fixed: var(--md-sys-color-tertiary-fixed);
+    --color-on-tertiary-fixed: var(--md-sys-color-on-tertiary-fixed);
+    --color-tertiary-fixed-dim: var(--md-sys-color-tertiary-fixed-dim);
+    --color-on-tertiary-fixed-variant: var(
+        --md-sys-color-on-tertiary-fixed-variant
+    );
+    --color-surface-dim: var(--md-sys-color-surface-dim);
+    --color-surface-bright: var(--md-sys-color-surface-bright);
+    --color-surface-container-lowest: var(
+        --md-sys-color-surface-container-lowest
+    );
+    --color-surface-container-low: var(--md-sys-color-surface-container-low);
+    --color-surface-container: var(--md-sys-color-surface-container);
+    --color-surface-container-high: var(--md-sys-color-surface-container-high);
+    --color-surface-container-highest: var(
+        --md-sys-color-surface-container-highest
+    );
+
+    --shadow-1:
+        0 0.0625rem 0.1875rem 0.0625rem rgba(0, 0, 0, 0.15),
+        0 0.0625rem 0.125rem 0 rgba(0, 0, 0, 0.3);
+    --shadow-2:
+        0 0.125rem 0.375rem 0.125rem rgba(0, 0, 0, 0.15),
+        0 0.0625rem 0.125rem 0 rgba(0, 0, 0, 0.3);
+    --shadow-3:
+        0 0.25rem 0.5rem 0.1875rem rgba(0, 0, 0, 0.15),
+        0 0.0625rem 0.1875rem 0 rgba(0, 0, 0, 0.3);
+    --shadow-4:
+        0 0.375rem 0.625rem 0.25rem rgba(0, 0, 0, 0.15),
+        0 0.125rem 0.1875rem 0 rgba(0, 0, 0, 0.3);
+    --shadow-5:
+        0 0.5rem 0.75rem 0.375rem rgba(0, 0, 0, 0.15),
+        0 0.25rem 0.25rem 0 rgba(0, 0, 0, 0.3);
+}
+
+@layer base {
+    html {
+        @apply h-full;
+    }
+
+    body {
+        @apply h-full bg-surface text-on-surface antialiased;
+    }
+}
